# openstack-vm-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: actions.py  catalog.py  snapshots.py  vms.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/schemas/: vm.py
app/services/: factory.py  openstack_mock.py  openstack_real.py
k8s/: deployment.yaml
scripts/: push_to_github.sh
tests/integration/: test_api.py  test_new_actions.py
tests/unit/: test_vm_service.py
