[project]
name = "openstack-vm-api-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black==24.4.2",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "openstacksdk>=3.0.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "python-json-logger==2.0.7",
    "ruff==0.4.4",
    "uvicorn[standard]==0.30.1",
]
